# LG_Buddy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEV_NOTES.md  LG_Buddy_Brightness.desktop  README.md  configure.sh  install.sh  uninstall.sh
.github/: pull_request_template.md
crates/lg-buddy/: Cargo.toml
crates/lg-buddy/src/: auth.rs  backend.rs  commands.rs  config.rs  events.rs  gnome.rs  lib.rs  lifecycle.rs  main.rs  policy.rs  runtime_phase.rs  screen.rs  session.rs  session_bus.rs  session_notifications.rs  settings.rs  state.rs  swayidle.rs  tv.rs  updates.rs  version.rs  wol.rs
crates/lg-buddy/src/session/: inactivity.rs  runner.rs
crates/lg-buddy/src/session/gamepad/: activity.rs  device_events.rs  devices.rs  hidraw.rs  mod.rs  reader.rs  registry.rs
crates/lg-buddy/src/session/gamepad/adapters/: logitech_g923.rs  mod.rs
crates/lg-buddy/src/sources/: mod.rs
crates/lg-buddy/src/sources/desktop/: gnome.rs  mod.rs
crates/lg-buddy/src/sources/linux/: logind.rs  mod.rs  network_manager.rs
crates/lg-buddy/tests/: cucumber.rs  mock_bscpylgtvcommand.rs  mock_gdbus.rs  mock_swayidle.rs  runtime_entrypoints.rs
crates/lg-buddy/tests/cucumber_support/: steps.rs  world.rs
crates/lg-buddy/tests/features/: auth_context.feature  brightness.feature  detect_backend.feature  monitor.feature  monitor_gnome.feature  monitor_swayidle.feature  networkmanager_sleep.feature  screen_off.feature  screen_on.feature  settings.feature  shutdown.feature  startup.feature  system_sleep.feature
crates/lg-buddy/tests/support/: mod.rs
docs/: architecture-overview.md  (+10 more)
(+14 files in other folders)
